one and two done three need to check

--- a/Js/js-test/index.html
+++ b/Js/js-test/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="second.js"></script>
+    <!-- <script src="second.js"></script> -->
     <!-- <script src="first.js"></script> -->
+    <!-- <script src="third.js"></script> -->
+    <script src="third1.js"></script>
 </head>
 <body>
     
